force-app/main/default/objects/Certification__c/Certification__c.object-meta.xml
<CustomObject>
    <label>Certification</label>
    <nameField>
        <displayFormat>CID-{000000}</displayFormat>
        <label>Certification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>