force-app/main/default/objects/Certification__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active/Not active flag for this person/contact record</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>