force-app/main/default/objects/Certification__c/fields/Active_Term__c.field-meta.xml
<CustomField>
    <fullName>Active_Term__c</fullName>
    <description>Number of years that this certification should remain active</description>
    <label>Active Term in Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>