force-app/main/default/objects/Certification__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <description>Names of applicable certifications available to a particular record type</description>
    <label>Certification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ROSA Knee</fullName>
            </value>
            <value>
                <fullName>ROSA Partial Knee</fullName>
            </value>
            <value>
                <fullName>ROSA Hip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>