force-app/main/default/objects/Certification__c/fields/Certification_Type__c.field-meta.xml
<CustomField>
    <fullName>Certification_Type__c</fullName>
    <label>Certification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cert 1</fullName>
            </value>
            <value>
                <fullName>Cert 2</fullName>
            </value>
            <value>
                <fullName>Cert 3</fullName>
            </value>
            <value>
                <fullName>Cert 4</fullName>
            </value>
            <value>
                <fullName>ROSA Knee</fullName>
            </value>
            <value>
                <fullName>ROSA Partial Knee</fullName>
            </value>
            <value>
                <fullName>ROSA Hip</fullName>
            </value>
            <value>
                <fullName>ROSA Brain Certification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>