force-app/main/default/objects/Certification__c/fields/Certified_Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Certified_Contact_Full_Name__c</fullName>
    <formula>Contact__r.FirstName &amp;&apos; &apos;&amp; Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certified Contact Full Name</label>
    <type>Text</type>
</CustomField>