force-app/main/default/objects/Certification__c/fields/Days_Since_Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Effective_From__c</fullName>
    <formula>TODAY() - Effective_From__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Effective From</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>