force-app/main/default/objects/Certification__c/fields/Earned_Date__c.field-meta.xml
<CustomField>
    <fullName>Earned_Date__c</fullName>
    <description>Date the certification was earned</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Earned Date</label>
    <type>Date</type>
</CustomField>