force-app/main/default/objects/Certification__c/fields/Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Effective_To__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective To</label>
    <type>Date</type>
</CustomField>