force-app/main/default/objects/Certification__c/recordTypes/ROSA_Robotics_RECON.recordType-meta.xml
<RecordType>
    <fullName>ROSA_Robotics_RECON</fullName>
    <active>true</active>
    <label>ROSA Robotics - RECON</label>
</RecordType>