force-app/main/default/objects/Certification__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Certification__c</columns>
    <columns>Certified_Contact_Full_Name__c</columns>
    <columns>Active_Term__c</columns>
    <columns>Days_Since_Effective_From__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>